<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="divide">/</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="multiplication">x</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="subtraction">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="addition">+</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="delete">bksp</string>
    <string name="ac">AC</string>
    <string name="emptySpace">" "</string>
    <string name="design_by_vaman">designed by Vaman    .</string>

</resources>
