<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainWindow"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#25f" >

    <LinearLayout
        android:id="@+id/textWindow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ddd"
        android:layout_weight="1" 
        android:orientation="vertical">
        

        <TextView
        	android:id="@+id/textview1"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:gravity="right"
        	android:textSize="12sp"
        ></TextView>
        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#111"
            android:background="@null"     
            android:gravity="right"
            android:cursorVisible="true"
            android:textSize="30sp"
            android:maxLines="1"
            android:maxLength="2000"
            android:scrollHorizontally="false"
            android:inputType="none"
            >
             

            <requestFocus />
        </EditText>
        
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/resetWindow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#123" >

      <!--    <ImageButton
            android:id="@+id/ImageButton1"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:src="@drawable/backspace"
            android:contentDescription="backspace"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
             />
	-->
        
        <Button
            android:id="@+id/buttonAC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac"
            android:textColor="#fff"
            android:onClick="clearContent"
             />

        <Button
            android:id="@+id/buttonbksp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_alignParentRight="true"
            android:textColor="#fff"
            android:onClick="modifyContent"
             />
        
        
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttonsWindow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#245"
        android:layout_weight="7" 
        android:orientation="vertical"
        >
        

	   <LinearLayout
	        android:id="@+id/buttonsRow1"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="7"
	        android:background="#000"
	        android:orientation="horizontal" >

	       <Button
	           style="@style/numberKeys"
	           android:id="@+id/button7"
	           android:layout_width="0dp"
	           android:layout_height="match_parent"
	           android:layout_weight="1"
	           android:text="@string/seven"
	           android:textStyle="bold"
	           android:textSize="30sp"
	           android:onClick="appendText"/>
	       
	       <Button
	           style="@style/numberKeys"
	           android:id="@+id/button8"
	           android:layout_width="0dp"
	           android:layout_height="match_parent"
	           android:text="@string/eight" 
	           android:layout_weight="1"
	           android:textStyle="bold"
	           android:textSize="30sp"
	           android:onClick="appendText" />
	       	       
	       <Button
	           style="@style/numberKeys"
	           android:id="@+id/button9"
	           android:layout_width="0dp"
	           android:layout_height="match_parent"
	           android:text="@string/nine" 
	           android:layout_weight="1"
	           android:textStyle="bold"
	           android:textSize="30sp"
	           android:onClick="appendText" />
	       	       	       
	       <Button
	           style="@style/arithmaticOpKeys"
	           android:id="@+id/buttonPlus"
	           android:layout_width="0dp"
	           android:layout_height="match_parent"
	           android:text="@string/addition"
	           android:layout_weight="1"
	           android:textStyle="bold"
	           android:textSize="30sp"
	           android:onClick="appendOperator" />
	          
	    </LinearLayout>
	        
	   <LinearLayout
	        android:id="@+id/buttonsRow2"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:background="#123"
	        android:layout_weight="7" 
	        android:orientation="horizontal"
	        >
	        
	       <Button
	           android:id="@+id/button4"
	           style="@style/numberKeys"
	           android:layout_width="wrap_content"
	           android:layout_height="match_parent"
	           android:text="@string/four"
	           android:layout_weight="1"
	           android:textStyle="bold"
	           android:textSize="30sp"
	           android:onClick="appendText" />
	       
	       <Button
	           android:id="@+id/button5"
	           style="@style/numberKeys"
	           android:layout_width="wrap_content"
	           android:layout_height="match_parent"
	           android:text="@string/five" 
	           android:layout_weight="1"
	           android:textStyle="bold"
	           android:textSize="30sp"
	           android:onClick="appendText" />
	       	       
	       <Button
	           android:id="@+id/button6"
	           style="@style/numberKeys"
	           android:layout_width="wrap_content"
	           android:layout_height="match_parent"
	           android:text="@string/six" 
	           android:layout_weight="1"
	           android:textStyle="bold"
	           android:textSize="30sp"
	           android:onClick="appendText" />
	       	       	       
	       <Button
	           android:id="@+id/buttonMinus"
	           style="@style/arithmaticOpKeys"
	           android:layout_width="wrap_content"
	           android:layout_height="match_parent"
	           android:text="@string/subtraction"
	           android:layout_weight="1"
	           android:textStyle="bold"
	           android:textSize="30sp"
	           android:onClick="appendOperator" />
	       
	       
	    </LinearLayout>
	   	   <LinearLayout
	        android:id="@+id/buttonsRow3"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:background="#123"
	        android:layout_weight="7" 
	        android:orientation="horizontal"
	        >
	        
	   	<Button
	           android:id="@+id/button1"
	           style="@style/numberKeys"
	           android:layout_width="wrap_content"
	           android:layout_height="match_parent"
	           android:text="@string/one"
	           android:layout_weight="1"
	           android:textStyle="bold"
	           android:textSize="30sp"
	           android:onClick="appendText" />
	       
	       <Button
	           android:id="@+id/button2"
	           style="@style/numberKeys"
	           android:layout_width="wrap_content"
	           android:layout_height="match_parent"
	           android:text="@string/two" 
	           android:layout_weight="1"
	           android:textStyle="bold"
	           android:textSize="30sp"
	           android:onClick="appendText" />
	       	       
	       <Button
	           android:id="@+id/button3"
	           style="@style/numberKeys"
	           android:layout_width="wrap_content"
	           android:layout_height="match_parent"
	           android:text="@string/three" 
	           android:layout_weight="1"
	           android:textStyle="bold"
	           android:textSize="30sp"
	           android:onClick="appendText" />
	       	       	       
	       <Button
	           android:id="@+id/buttonMulti"
	           style="@style/arithmaticOpKeys"
	           android:layout_width="wrap_content"
	           android:layout_height="match_parent"
	           android:text="@string/multiplication"
	           android:layout_weight="1"
	           android:textStyle="bold"
	           android:textSize="30sp"
	           android:onClick="appendOperator" />
	   	       
	    </LinearLayout>
	   	   
	   	<LinearLayout
	        android:id="@+id/buttonsRow4"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:background="#123"
	        android:layout_weight="7" 
	        android:orientation="horizontal"
	        >
	        
	   	    
	   	<Button
	           android:id="@+id/buttonDot"
	           style="@style/numberKeys"
	           android:layout_width="wrap_content"
	           android:layout_height="match_parent"
	           android:text="@string/decimal"
	           android:layout_weight="1"
	           android:textStyle="bold"
	           android:textSize="30sp"
	           android:onClick="appendText" />
	       
	       <Button
	           android:id="@+id/button0"
	           style="@style/numberKeys"
	           android:layout_width="wrap_content"
	           android:layout_height="match_parent"
	           android:text="@string/zero" 
	           android:layout_weight="1"
	           android:textStyle="bold"
	           android:textSize="30sp"
	           android:onClick="appendText" />
	       	       
	       <Button
	           android:id="@+id/buttonEqual"
	           style="@style/resultOpKey"
	           android:layout_width="wrap_content"
	           android:layout_height="match_parent"
	           android:text="@string/equal" 
	           android:layout_weight="1"
	           android:onClick="findResult"
	           />
	       	       	       
	       <Button
	           android:id="@+id/buttonDivision"
	           style="@style/arithmaticOpKeys"
	           android:layout_width="wrap_content"
	           android:layout_height="match_parent"
	           android:text="@string/divide"
	           android:layout_weight="1"
	           android:textStyle="bold"
	           android:textSize="30sp"
	           android:onClick="appendOperator" />
	    
	    </LinearLayout>
	   	   
        
    </LinearLayout>
</LinearLayout>